package trabalho2;

public class InvalidUserException extends Exception{
    public InvalidUserException(String message){
        super(message);
    }
}
