package trabalho2;

public class Livro extends Item {
    private String editora, ISBN;

    @Override
    public void emprestimo() {

    }

    @Override
    public void devolucao() {

    }
}
