package trabalho2;

public class Revista extends Item {
    private int volume, numero;


    @Override
    public void emprestimo() {

    }

    @Override
    public void devolucao() {

    }
}
