package trabalho2;

public class UnavailableItemException extends Exception{
    public UnavailableItemException(String message){
        super(message);
    }
}
