package trabalho2;

public class UncheckedItemException extends Exception{
    public UncheckedItemException(String message){
        super(message);
    }
}
