package trabalho2.exceptions;

public class InvalidItemException extends Exception {
    public InvalidItemException(String msg) {
        super(msg);
    }
}
